# OSMDeepOD

./: .dockerignore  .env  .gitignore  .project  .pydevproject  .style.yapf  .travis.yml  MANIFEST.in  README.md  circle.yml  docker-compose.yml  index.html  install_requirements.sh  mapproxy.yml  params.json  requirements.txt  requires.dev.txt  setup.cfg  setup.py  versioneer.py
docker/: Dockerfile  README.md  crane.yaml  docker-compose.yml  gpu_check.py
docker/crosswalk/: gpu_check.py
docker/crosswalks/: Dockerfile  README.md
docker/hualos_keras_cuda/: Dockerfile  README.md
docker/keras_cuda/: Dockerfile  README.md
docker/redis/: Dockerfile  entrypoint.sh  my_redis.conf
dockerfiles/: docker_run.py  run.py
documentation/: Makefile  aufgabenstellung.tex  hsrthesis.cls  main.dec  main.def  main.tex
examples/: ConvnetTrainer.py  VisualizeBoxWalker.py  VisualizeSquaredImages.py  VisualizeStreets.py  VisualizeTile.py  visualize_box_walker.py  visualize_squared_images.py  visualize_streets.py  visualize_tile.py  zuerich_bellevue.py
src/: 0000__temp.ipynb  000_Constants.ipynb  000_Helpers.ipynb  001_PreProcess_PrepareForSegementation-Copy1.ipynb  002_BoxImagesTool.ipynb  003_PreProcess_sample_masks.ipynb  999__counter.ipynb  999_image_service.ipynb  Constants.ipynb  Crop-from-local-Images.ipynb  Folium_example.ipynb  Helpers.ipynb  __init__.py  _version.py  image_tool.ipynb  zzz_Crop-from-local-Images-Copy1.ipynb
tests/: TestHaarFaceDetection.py  TestHaarZebraDetection.py  TestOpen.py  TestSIFT.py  TestSURF.py  __init__.py  conftest.py  test_config.ini
(+336 files in other folders)
