[metadata]
license-file = LICENSE

[bdist_wheel]
python-tag = py3

[flake8]
statistics = 1
ignore = E501

[nosetests]
with-xunit = true
with-coverage = true
cover-package = src

[easy_install]

[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
versionfile_build = src/_version.py
tag_prefix =
parentdir_prefix = crosswalks-
